Corrected responsivity(overlapping images)

--- a/css/styles.css
+++ b/css/styles.css
@@ -244,7 +244,7 @@ nav h1 a {
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 46.4%;
+  width: 100%;
 }
 
 #restaurant-name {
@@ -252,10 +252,11 @@ nav h1 a {
   font-family: Arial,sans-serif;
   font-size: 20pt;
   font-weight: 200;
-  letter-spacing: 0;
+  letter-spacing: 2px;
   margin: 15px 0 30px;
   text-transform: uppercase;
   line-height: 1.1;
+  text-align: center;
 }
 
 #restaurant-img {
@@ -277,14 +278,14 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 100%;
+  width: 100%;
 }
 
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 140px 40px 30px;
-  width: (50%-50px);
+  width: calc(50% - 50px);
 }
 
 #reviews-container {
@@ -308,12 +309,13 @@ nav h1 a {
   background-color: #fff;
   border: 2px solid #f3f3f3;
   list-style-type: none;
-  margin: 0 0 30px;
+  margin: 0 0 10px;
   overflow: hidden;
   padding: 0;
   position: relative;
   display: flex;
   flex-wrap:wrap;
+  width: 90%;
 }
 
 #reviews-list li p {
